# seq_class

./: Cargo.toml  LICENSE  README.md
src/: alphabet.rs  main.rs  utils.rs
