[package]
name = "seq_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generalized_suffix_tree = { git = "https://github.com/sriram98v/generalized_suffix_tree" }
bio = "1.1.0"
indicatif = "0.17.2"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"