[package]
name = "seq_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.7"
shrust = "0.0.7"
generalized_suffix_tree = { path =  "/home/sriramv/Projects/generalized_suffix_tree"}
bio = "1.1.0"
indicatif = "0.17.2"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.91"
error-chain = "0.12.4"
glob = "0.3.1"
