[package]
name = "seq_class"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shrust = "0.0.7"
generalized_suffix_tree = { git =  "https://github.com/sriram98v/generalized_suffix_tree"}
bio = "1.3.0"
indicatif = "0.17.2"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.152"
serde_json = "1.0.91"
error-chain = "0.12.4"
glob = "0.3.1"
rayon = "1.7.0"
